--- a/presentation/presentation.org
+++ b/presentation/presentation.org
@@ -14,9 +14,23 @@ character.
 *** Std Input, Std Output, Std Error?
 **** Standard Input
 - Standard input is stream data (often text) going into a program
-- It's file descriptor is 0 (zero)
+- It's file descriptor is *0* (zero)
 
 **** Standard Output
+- Standard output is the stream where a program writes its output data. 
+- Not all programs generate output.
+- One example of standard out is the list of files from ~ls~
+- Or if you ~echo "hello, world", "hello, world" is written to standard out
+- The file descriptor is *1*.
+
+**** Standard Error
+- Standard error is another output stream typically used by programs to
+  output error messages or diagnostics.
+- It's mostly used to differentiate between normal output and output that
+  represents an error. 
+- It's pretty much the same as standard output except for that it's written
+  to a different stream for differentiation.
+- The file descriptor is *2*
 
 *** Pipelines
 **** What is a pipeline?
@@ -28,9 +42,16 @@ git log | grep "v1.0.0"
 
 The output of each command in the pipeline is connected via a pipe to the input of the next command. That is, each command reads the previous command’s output. 
 
-**** What does ~|&~ mean?
-It's essentially shorthand for ~2>&1~, which means redirect all output of the
-command on the left side, to standard out on the right side. 
+*** Redirection
+**** What does ~2>&1~ mean?
+You may oten see the above in scripts usually in the format of something like ~> /dev/null
+2>&1~
+
+This might seem a bit cryptic at first, but it essentially means is send all
+output of the running program to the blackhole ~/dev/null~ and include both
+~standard error~ & ~standard output~. You may want to only send standard
+output to dev null and that would be ~1>/dev/null~. Or maybe just standard
+error ~2>/dev/null~
 
 * Exercises
 ** 1.1
